Versuch 5 fertig und kleine Änderungen an 6

--- a/physik_praktikum/versuch5/quellen.bib
+++ b/physik_praktikum/versuch5/quellen.bib
@@ -94,3 +94,24 @@
     year = 2022,
     urldate = {2022-03-09}
 }
+
+@online{CO2Dichte,
+    title = {Liste der Dichte gasförmiger Stoffe},
+    author = {Lumitos},
+    url = {https://www.chemie.de/lexikon/Liste_der_Dichte_gasförmiger_Stoffe.html},
+    urldate = {2022-03-22}
+}
+
+@online{co2dichteneu,
+    title = {Dichte von CO2},
+    author = {},
+    url= {https://theengineeringmindset.com/properties-of-carbon-dioxide-at-atmospheric-pressure/?msclkid=f9045740ab7f11ec8a21e3e189466ed2},
+    urldate= {2022-03-24},
+}
+
+@online{Lunge,
+    title = {Die lunge- unser zentrales Atemorgan},
+    author = {LungenLiga},
+    url = {https://www.lungenliga.ch/de/die-lungen-schuetzen/wissen-zur-lunge/die-lunge.html},
+    urldate= {2022-03-24}
+}
