--- a/physik_praktikum/versuch5/versuch5.tex
+++ b/physik_praktikum/versuch5/versuch5.tex
@@ -36,7 +36,7 @@
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
 \date{24.03.2022}
-\title{Physikalisches Grundpraktikum Teil I \\ (Mechanik und Thermodynamik) \\ Versuch 5 Luftballon mit \ce{CO2}}
+\title{Physikalisches Grundpraktikum Teil I \\ (Mechanik und Thermodynamik) \\ Versuch 5: Luftballon mit \ce{CO2}}
 \author{Wafaa Al Nachwati; Matrikelnummer: 8102531 \\ Finn Wagner; Matrikelnummer: 8102237}
 
 \begin{document}
@@ -52,7 +52,7 @@
       Aber, da sich ihre Massen unterscheiden wirkt auf den mit \ce{CO2} gefüllten Luftballon, wie wir später sehen werden, aufgrund der höheren Dichte von \ce{CO2}
       eine stärkere Gewichtskraft, die mehr von der geschwindigkeitsabhängigen Reibungskraft überwinden kann. Der mit \ce{CO2} gefüllte Luftballon fällt schneller.
       Aus dieser Beziehung zwischen Dichte und Geschwindigkeit stellen wir eine Formel auf und können durch Messen des Volumens der Luftballons, sowie der Fallgeschwindigkeiten
-      zunächst den Faktor zwischen den beiden Dichten, aber da wir die Dichte von Luft bereits kennen~\cite{Aufgabenstellung}, die Dichte von \ce{CO2} berechnen.
+      zunächst den Faktor zwischen den beiden Dichten und da wir die Dichte von Luft bereits kennen~\cite{Aufgabenstellung}, die Dichte von \ce{CO2} berechnen.
 
     \section{Formeln}
       Auf jeden Körper wirkt im Schwerefeld der Erde eine Zentralkraft Richtung Erdmittelpunkt, proportional zur Masse des Körpers.
@@ -61,7 +61,7 @@
       \end{equation}
       Die Masse eines Körpers (mit Dichte \(\rho_K\)) können wir auch über seine Dichte und sein Volumen ausdrücken mit der Beziehung:
       \begin{equation} \label{eq:masse_dichte_rel}
-          m = \rho_K \cdot V \cdot g
+          m = \rho_K \cdot V
       \end{equation}
       Weiterhin wirkt auf Körper mit echter Ausdehnung (keine Punktmasse) in Flüssigkeiten/Gasen wie Luft eine Auftriebskraft,
       die durch Verdrängung des Mediums entsteht. Sie ist abhängig vom verdrängten Volumen und der Dichte des Mediums (Gases \(\rho_G\)) in dem sich der Körper befindet.
@@ -86,7 +86,7 @@
       \begin{equation} \label{eq:geschwindigkeit}
           v = \frac{h}{t_{Fall}}
       \end{equation}
-      Die Endgeschwindigkeit des Ballons lässt sich aus dem Kräftegleichgewicht (Formel~\ref{eq:gleichgewicht}) durch einsetzen der stokesschen Reibung ausdrücken:
+      Die Endgeschwindigkeit des Ballons lässt sich aus dem Kräftegleichgewicht (Formel~\ref{eq:gleichgewicht}) durch Einsetzen der stokesschen Reibung ausdrücken:
       \begin{equation}
           \begin{gathered} \label{eq:stokes_geschwindigkeit}
               F_G = F_A + F_R \Rightarrow F_R = F_G - F_A \\
