--- a/physik_praktikum/versuch1/versuch1.tex
+++ b/physik_praktikum/versuch1/versuch1.tex
@@ -1,20 +1,24 @@
 \documentclass{article}
-
 \usepackage[a4paper, top=2cm, bottom=3cm]{geometry}
 
 \usepackage[ngerman]{babel}
 \usepackage{csquotes}
 
 \usepackage{booktabs}
-\usepackage{mathtools}
+
 \usepackage{amssymb}
-\usepackage{enumitem}
 \usepackage{amsmath}
+\usepackage{mathtools}
+\usepackage{enumitem}
 
 \usepackage{hyperref}
 
 \usepackage{graphicx}
 \usepackage{wrapfig}
+
+\usepackage{parskip}
+\usepackage{fancyhdr}
+\usepackage{vmargin}
 
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.18}
@@ -35,10 +39,13 @@
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
 \date{25.03.2022}
-\title{Physikalisches Grundpraktikum Teil I \\ (Mechanik und Thermodynamik) \\ Versuch 1 Mechanische Schwingungen}
-\author{Wafaa Al Nachwati (8102531), Finn Bietz (8104485), Finn Wagner (8102237)}
+% Physikalisches Grundpraktikum I \\ (Mechanik und Thermodynamik)
+\title{Versuch 1: Mechanische Schwingungen}
+\author{Wafaa Al Nachwati (8102531) \\ Finn Bietz (8104485) \\ Finn Wagner (8102237)}
 
 \begin{document}
+
+    \input{deckblatt.tex}
 
 	\maketitle
 
